// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardBody customize 1`] = `
<div>
  <div
    class="card-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCardBody component 1`] = `
<div>
  <div
    class="card-body"
  >
    Test
  </div>
</div>
`;
